# crawlbookmarks

./: .gitignore  README.md  noxfile.py  output_schema.json  pyproject.toml  requirements.txt  ruff.toml
sandbox/: chrome_test.py  controller_test.py  ff_test.py
src/crawlbookmarks/: __main__.py  constants.py  main.py  utils.py
src/crawlbookmarks/chrome/: __init__.py  controllers.py  methods.py
src/crawlbookmarks/cli/: __init__.py  _cli.py  logger.py
src/crawlbookmarks/firefox/: __init__.py  controllers.py  methods.py
src/crawlbookmarks/utils/io/: __init__.py  _io.py
src/crawlbookmarks/utils/validators/: __init__.py  _validators.py
