[project]
name = "crawlbookmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "html5lib>=1.1",
    "lxml>=5.3.1",
    "ruff>=0.11.0",
]

[project.scripts]
crawlbookmarks = "crawlbookmarks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
